--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -10,15 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "7899aa07",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df=pd.read_csv(\"loan_default_preprocessed.csv\")\n",
-    "df_num=df[[\"Age\",\"Income\",\"LoanAmount\",\"CreditScore\",\"MonthsEmployed\",\"NumCreditLines\",\"InterestRate\",\"LoanTerm\",\"DTIRatio\",\"Default\"]]"
+    "df=pd.read_csv(\"loan_default_numeric.csv\")"
    ]
   },
   {
@@ -31,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "206caadb",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = df_num.drop('Default', axis=1)\n",
+    "X = df.drop('Default', axis=1)\n",
     "y = df['Default']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
