--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 534,
    "id": "7899aa07",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df=pd.read_csv(\"loan_default_numeric.csv\")"
+    "df=pd.read_csv(\"loan_default_preprocessed.csv\")"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 535,
    "id": "206caadb",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,8 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, \n",
     "    test_size=0.2, \n",
-    "    stratify=y\n",
+    "    stratify=y,\n",
+    "    random_state=3407,\n",
     ")"
    ]
   },
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 536,
    "id": "6ff8ced0",
    "metadata": {},
    "outputs": [],
@@ -71,6 +72,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85a1add1",
+   "metadata": {},
+   "source": [
+    "balance training dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 537,
+   "id": "a4a0f7a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import RandomOverSampler, SMOTE\n",
+    "\n",
+    "ros = RandomOverSampler()\n",
+    "smote = SMOTE()\n",
+    "X_train,y_train=ros.fit_resample(X_train,y_train)\n",
+    "X_train,y_train=smote.fit_resample(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d67a8a33",
    "metadata": {},
    "source": [
@@ -79,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 538,
    "id": "c8002efa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-20 {\n",
+       "<style>#sk-container-id-67 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
@@ -116,15 +140,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 {\n",
+       "#sk-container-id-67 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 pre {\n",
+       "#sk-container-id-67 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 input.sk-hidden--visually {\n",
+       "#sk-container-id-67 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -136,7 +160,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-67 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -144,7 +168,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-container {\n",
+       "#sk-container-id-67 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -154,7 +178,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-67 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -170,14 +194,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-20 div.sk-parallel-item::after {\n",
+       "#sk-container-id-67 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-parallel {\n",
+       "#sk-container-id-67 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -185,28 +209,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-parallel-item {\n",
+       "#sk-container-id-67 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-67 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-67 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-67 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-20 div.sk-serial {\n",
+       "#sk-container-id-67 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -224,14 +248,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-20 div.sk-toggleable {\n",
+       "#sk-container-id-67 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-20 label.sk-toggleable__label {\n",
+       "#sk-container-id-67 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: block;\n",
        "  width: 100%;\n",
@@ -241,7 +265,7 @@
        "  text-align: center;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-67 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -249,13 +273,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-67 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-20 div.sk-toggleable__content {\n",
+       "#sk-container-id-67 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -264,12 +288,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-67 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-67 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -277,79 +301,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-67 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-67 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-67 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-20 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-67 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-67 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-20 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-67 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-67 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-20 div.sk-label label {\n",
+       "#sk-container-id-67 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-67 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-20 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-67 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-20 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-67 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-20 div.sk-label label {\n",
+       "#sk-container-id-67 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-label-container {\n",
+       "#sk-container-id-67 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-20 div.sk-estimator {\n",
+       "#sk-container-id-67 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -359,18 +383,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-estimator.fitted {\n",
+       "#sk-container-id-67 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-20 div.sk-estimator:hover {\n",
+       "#sk-container-id-67 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-67 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -457,7 +481,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-20 a.estimator_doc_link {\n",
+       "#sk-container-id-67 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -472,31 +496,31 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-67 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-20 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-67 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-20 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-67 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-20\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-20\" type=\"checkbox\" checked><label for=\"sk-estimator-id-20\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(max_iter=1000)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-67\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(max_iter=1000, random_state=3407)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-67\" type=\"checkbox\" checked><label for=\"sk-estimator-id-67\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression(max_iter=1000, random_state=3407)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression(max_iter=1000)"
+       "LogisticRegression(max_iter=1000, random_state=3407)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 538,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +528,7 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "model = LogisticRegression(max_iter=1000)\n",
+    "model = LogisticRegression(max_iter=1000,random_state=3407)\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -518,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 539,
    "id": "94b20b4e",
    "metadata": {},
    "outputs": [
@@ -529,12 +553,12 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      1.00      0.94     45139\n",
-      "           1       0.64      0.02      0.04      5931\n",
+      "           0       0.94      0.67      0.79     45139\n",
+      "           1       0.22      0.68      0.33      5931\n",
       "\n",
-      "    accuracy                           0.88     51070\n",
-      "   macro avg       0.76      0.51      0.49     51070\n",
-      "weighted avg       0.86      0.88      0.83     51070\n",
+      "    accuracy                           0.67     51070\n",
+      "   macro avg       0.58      0.68      0.56     51070\n",
+      "weighted avg       0.86      0.67      0.73     51070\n",
       "\n"
      ]
     }
@@ -554,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 540,
    "id": "c4ce8a94",
    "metadata": {},
    "outputs": [
@@ -563,8 +587,8 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[45070    69]\n",
-      " [ 5810   121]]\n"
+      "[[30420 14719]\n",
+      " [ 1882  4049]]\n"
      ]
     }
    ],
@@ -575,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 541,
    "id": "78b5e9db",
    "metadata": {},
    "outputs": [
@@ -583,10 +607,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8849\n",
-      "Precision: 0.6368\n",
-      "Recall: 0.0204\n",
-      "F1 Score: 0.0395\n"
+      "Accuracy: 0.6749\n",
+      "Precision: 0.2157\n",
+      "Recall: 0.6827\n",
+      "F1 Score: 0.3279\n"
      ]
     }
    ],
